dnl Process this file with autoconf to produce a configure script.
dnl Created by Anjuta application wizard.

AC_INIT(logdump, 0.1, bobmittmann@gmail.com)

AC_CONFIG_SRCDIR([logdump.c])
AM_INIT_AUTOMAKE

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC

AC_CONFIG_FILES([Makefile])

dnl AC_CONFIG_HEADERS([config.h])

AC_OUTPUT
